<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/timer_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/colorPrimary"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.8" />

    <com.jem.rubberpicker.RubberSeekBar
        android:id="@+id/seek_bar_goal_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:highlightDefaultThumbOnTouchColor="@color/colorPrimaryDark"
        app:highlightTrackColor="@color/colorPrimary"
        app:initialValue="60"
        app:layout_constraintTop_toBottomOf="@id/timer_progress_bar"
        app:maxValue="300"
        app:minValue="15"
        app:normalTrackColor="#AAAAAA"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/text_view_goal_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_1_hour"
        android:textColor="@android:color/darker_gray"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_goal_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_pause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_goal_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/pause"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@id/text_view_goal_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/stop"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_pause"
        app:layout_constraintTop_toBottomOf="@id/text_view_goal_time" />

</androidx.constraintlayout.widget.ConstraintLayout>