<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toos="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_separator_vertical"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/view_center_invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_separator_horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/view_separator_vertical"
        app:layout_constraintTop_toTopOf="@id/view_separator_vertical" />

    <View
        android:id="@+id/view_center_invisible"
        android:layout_width="0.001dp"
        android:layout_height="0.001dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/text_view_remaining_exams_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_exams"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_separator_horizontal"
        app:layout_constraintEnd_toEndOf="@id/view_separator_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_view_remaining_exams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/view_separator_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_remaining_exams_label"
        toos:text="3" />

    <TextView
        android:id="@+id/text_view_remaining_assignments_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_assignments"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view_separator_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_separator_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_view_remaining_assignments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_separator_vertical"
        app:layout_constraintTop_toBottomOf="@id/text_view_remaining_assignments_label"
        toos:text="2" />

    <TextView
        android:id="@+id/text_view_days_to_exam_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_to_next_exam"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view_center_invisible"
        app:layout_constraintEnd_toEndOf="@id/view_separator_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_separator_horizontal"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_view_days_to_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/view_separator_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_days_to_exam_label"
        toos:text="1" />

    <TextView
        android:id="@+id/time_studied_today_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_studied_today"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view_center_invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_separator_vertical"
        app:layout_constraintTop_toTopOf="@id/view_separator_horizontal"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/time_studied_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_separator_vertical"
        app:layout_constraintTop_toBottomOf="@id/time_studied_today_label"
        toos:text="1:04" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separator_vertical"
        android:background="@drawable/bg_greeting_frame_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_user_n_have_a_good_study"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>